# chat-pulse

./: .env.example  .gitignore  LICENSE  README  README.md  client.js  docker-compose.yml  env.example  mongo-init.js  package-lock.json  package.json
.github/workflows/: deploy.yml  docs.yml  publish.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
backend/apps/messages/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/messages/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_unique_kafka_offset.py
backend/apps/rooms/: apps.py  models.py  redis_service.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/rooms/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: health.py  kafka_config.py  kafka_producer.py  redis_client.py  urls.py
backend/config/settings/: base.py  local.py  production.py  test.py
cli/: README.md  pyproject.toml
cli/chatpulse_cli/: auth.py  chat.py  client.py  config.py  main.py  messages.py  rooms.py  token_storage.py  ui.py
deploy/: .env.production  aiven-ca.pem  backup.sh  nginx.conf
docs/: index.html  install.sh  vercel.json
src/: index.js
src/config/: db.js  kafka.js  redis.js
src/controllers/: roomController.js
src/kafka/: consumer.js
src/models/: Message.js  Room.js  User.js
src/routes/: roomRoutes.js
src/services/: messageService.js  roomService.js
(+1 files in other folders)
