[project]
name = "chatpulse-cli"
version = "0.1.0"
description = "Terminal-based CLI client for ChatPulse real-time chat"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
]

[project.scripts]
chatpulse = "chatpulse_cli.main:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
