[project]
name = "chatpulse-cli"
version = "0.1.1"
description = "Terminal-based CLI client for ChatPulse real-time chat"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://chatpulse.online"
Source = "https://github.com/shiv-am0/chat-pulse"
Tracker = "https://github.com/shiv-am0/chat-pulse/issues"

[project.scripts]
chatpulse = "chatpulse_cli.main:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
